--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 							<p class="major">I'm Billy, a 4th year student at KTH that's currently pursuing a degree in Interactive Media Technology with a specialization on physical interaction. Below you will find a selection of projects I've been a part of during my time at KTH.</p>
                             <ul class="icons">
 								<li><a href="https://www.linkedin.com/in/billy-jansheden-190258a2/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://github.com/bjansheden" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -34,9 +35,11 @@
 				<!-- Two -->
 					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in color1" id="first">
 						<div class="content">
-							<h2>Sound the Alarm!</h2>
-							<p>"Sound the Alarm!" is an interactive sonification of Covid-19's spread in Sweden spanning from February 27th 2020 until February 27th 2021. The project was written in Pure Data and the user interface was also created in Pure Data.</p>
-							
+							<h2 style="color:white">Sound the Alarm!</h2>
+							<p style="color:white">"Sound the Alarm!" is an interactive sonification of Covid-19's spread in Sweden spanning from February 27th 2020 until February 27th 2021. The project was written in Pure Data and the user interface was also created in Pure Data.</p>
+							<ul class="actions stacked">
+								<li><a href="#" class="button">Watch the</a></li>
+							</ul>
 						</div>
 						<div class="image image-position-center">
 							<img src="images/SoundTheAlarmGUI.png" alt="" />
@@ -48,6 +51,9 @@
 						<div class="content">
 							<h2>SLAR</h2>
 							<p>"SLAR" is an AR-map used to provide the user with a new perspective on the frequently used SL map. By visualizing a 2D-map in a 3D-environment the user gains the ability to tilt the map and view it from the preffered position. The models of the map was created in Unity and the AR-functionality uses the Vuforia Engine.</p>
+							<ul class="actions stacked">
+								<li><a href="https://vimeo.com/543952397" class="button">Watch the demo</a></li>
+							</ul>
 						</div>
 						<div class="image">
 							<img src="images/SLAR_app.png" alt="" />
