--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2 style="color:white">Sound the Alarm!</h2>
 							<p style="color:white">"Sound the Alarm!" is an interactive sonification of Covid-19's spread in Sweden spanning from February 27th 2020 until February 27th 2021. The project was written in Pure Data and the user interface was also created in Pure Data.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Watch the</a></li>
+								<li><a href="https://vimeo.com/543964052" class="button">Watch the demo</a></li>
 							</ul>
 						</div>
 						<div class="image image-position-center">
