--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 					</section>
 
 				<!-- Two -->
-					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in color1" id="first">
+					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in color1 invert" id="first">
 						<div class="content">
-							<h2 style="color:white">Sound the Alarm!</h2>
-							<p style="color:white">"Sound the Alarm!" is an interactive sonification of Covid-19's spread in Sweden spanning from February 27th 2020 until February 27th 2021. The project was written in Pure Data and the user interface was also created in Pure Data.</p>
+							<h2>Sound the Alarm!</h2>
+							<p>"Sound the Alarm!" is an interactive sonification of Covid-19's spread in Sweden spanning from February 27th 2020 until February 27th 2021. The project was written in Pure Data and the user interface was also created in Pure Data.</p>
 							<ul class="actions stacked">
 								<li><a href="https://vimeo.com/543964052" class="button">Watch the demo</a></li>
 							</ul>
