Updates + adding of new project
Minor testing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style3 orient-left content-align-left image-position-center fullscreen onload-image-fade-in onload-content-fade-right color2">
 						<div class="content">
 							<h1>About me</h1>
-							<p class="major">I'm Billy, a 4th year student at KTH that's currently pursuing a degree in Interactive Media Technology with a specialization on physical interaction. Below you will find a selection of projects I've been a part of during my time at KTH.</p>
+							<p class="major">I'm Billy, a 5th year student at KTH that's currently pursuing a degree in Interactive Media Technology. Below you will find a selection of projects I've been a part of during my time at KTH.</p>
                             <ul class="icons">
 								<li><a href="https://www.linkedin.com/in/billy-jansheden-190258a2/" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/bjansheden" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
@@ -59,16 +59,28 @@
 							<img src="images/SLAR_app.png" alt="" />
 						</div>
 					</section>
+				
+				<!-- Four -->
+					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in color7">
+						<div class="content">
+							<h2>Buddi</h2>
+							<p>"Buddi" </p>
+							<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fnode-id%3D103%253A962" allowfullscreen></iframe>
+							<ul class="actions stacked">
+								<li><a href="https://vimeo.com/543952397" class="button">Watch the demo</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/SLAR_app.png" alt="" />
+						</div>
+					</section>	
 					
-
-				<!-- Five -->
+				<!-- Five -->	
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h3>To be continued...</h3>
 							<p>This portfolio will continue to get updated sporadically, so make sure to keep an eye out!</p>
 						</div>
-
-
 					</section>
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
