--- a/index.html
+++ b/index.html
@@ -65,13 +65,16 @@
 						<div class="content">
 							<h2>Buddi</h2>
 							<p>"Buddi" </p>
-							<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fpage-id%3D103%253A962%26node-id%3D103%253A966%26viewport%3D1062%252C209%252C0.08%26scaling%3Dscale-down%26starting-point-node-id%3D103%253A966%26show-proto-sidebar%3D1" allowfullscreen></iframe>
+							<iframe 
+							style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+							width="400" 
+							height="400" 
+							src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fpage-id%3D103%253A962%26node-id%3D103%253A966%26viewport%3D1062%252C209%252C0.08%26scaling%3Dscale-down%26starting-point-node-id%3D103%253A966%26show-proto-sidebar%3D1" 
+							allowfullscreen>
+							</iframe>
 							<ul class="actions stacked">
 								<li><a href="https://vimeo.com/543952397" class="button">Watch the demo</a></li>
 							</ul>
-						</div>
-						<div class="image">
-							<img src="images/SLAR_app.png" alt="" />
 						</div>
 					</section>	
 					
