--- a/index.html
+++ b/index.html
@@ -64,17 +64,13 @@
 					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in color7">
 						<div class="content">
 							<h2>Buddi</h2>
-							<p>"Buddi" </p>
-							<iframe 
-							style="border: 1px solid rgba(0, 0, 0, 0.1);" 
-							width="400" 
-							height="400" 
-							src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fpage-id%3D103%253A962%26node-id%3D103%253A966%26viewport%3D1062%252C209%252C0.08%26scaling%3Dscale-down%26starting-point-node-id%3D103%253A966%26show-proto-sidebar%3D1" 
-							allowfullscreen>
-							</iframe>
+							<p>"Buddi" is an app that's designed to assist elderly people with accessing various services online. </p>
 							<ul class="actions stacked">
-								<li><a href="https://vimeo.com/543952397" class="button">Watch the demo</a></li>
+								<li><a href="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fpage-id%3D103%253A962%26node-id%3D103%253A966%26viewport%3D1062%252C209%252C0.08%26scaling%3Dscale-down%26starting-point-node-id%3D103%253A966%26show-proto-sidebar%3D1" class="button">Try the demo</a></li>
 							</ul>
+							<div class="image">
+								<img src="images/Buddi.png" alt="" />
+							</div>
 						</div>
 					</section>	
 					
