FIxes with placement
Issues with placement of picture, switched places.

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
 					</section>
 				
 				<!-- Four -->
-					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in color7">
+					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in color3">
 						<div class="content">
 							<h2>Buddi</h2>
 							<p>"Buddi" is an app that's designed to assist elderly people with accessing various services online. </p>
 							<ul class="actions stacked">
 								<li><a href="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FGTOXDIEs5IQH6pISsqeOLi%2FPersonal-Project%253A-Design-Online-World%3Fpage-id%3D103%253A962%26node-id%3D103%253A966%26viewport%3D1062%252C209%252C0.08%26scaling%3Dscale-down%26starting-point-node-id%3D103%253A966%26show-proto-sidebar%3D1" class="button">Try the demo</a></li>
 							</ul>
-							<div class="image">
-								<img src="images/Buddi.png" alt="" />
-							</div>
+						</div>
+						<div class="image image-position-center">
+							<img src="images/Buddi.png" alt="" />
 						</div>
 					</section>	
 					
