--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					</section>
 				
 				<!-- Four -->
-					<section class="spotlight style2 orient-left content-align-left image-position-center onscroll-image-fade-in color3">
+					<section class="spotlight style2 orient-right content-align-left image-position-center onscroll-image-fade-in color3">
 						<div class="content">
 							<h2>Buddi</h2>
 							<p>"Buddi" is an app that's designed to assist elderly people with accessing various services online. </p>
